Updates all examples with comments, updates KEYWORDs, updates library properties

--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.0.0
 author=Elias Santistevan <techsupport@sparkfun.com>
 maintainer=SparkFun Electronics <sparkfun.com>
 sentence=Library for the DA7280 Haptic Driver
-paragraph=
+paragraph=This library is written for the DA7280 Haptic Driver IC. The DA7280 can run LRA or ERM motors via I2C, PWM, or using onboard memory, it's possible to run it headless. 
 category=Sensors
 url=https://github.com/sparkfun/DA7280_Haptic_Driver_Arduino_Library
 architecture=*
