Updates name of library in properties file, removes diagnostic print statements, adds event variable to I2C_mode example

--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=SparkFun Haptic Driver Library
+name=SparkFun Qwiic Haptic Driver DA7280 Library
 version=1.0.0
 author=Elias Santistevan <techsupport@sparkfun.com>
 maintainer=SparkFun Electronics <sparkfun.com>
